<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="400dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/now_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="30dp"
            android:layout_height="wrap_content"/>
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:minHeight="30dp"
            android:layout_height="wrap_content" />
        <TextView

            android:id="@+id/total_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="30dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_play"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/start" />

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pause" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/edit_url"
            android:text="@string/addVideo"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btn_commit"
            android:text="@string/load"/>
        <TextView
            android:textColor="@color/colorNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/note"/>
    </LinearLayout>


</LinearLayout>